Append '%' to each line end.

--- a/7-thesis/main.tex
+++ b/7-thesis/main.tex
@@ -51,338 +51,338 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{abstract}
-摘要\enskip---\enskip可以輸入繁體字了。教育雲端服務平臺將進行資安設備調整作業，並於本次作業時程完成後，
-進行網站功能測試，屆時網路服務將會中斷，造成您的不便，敬請見諒。獲得快速的翻譯。
-應該還要有一行，不可能只寫那麼少。可是這樣還不夠多，還不會換行。可以再給我多一點嗎，我很需要換下一行。
-臺灣東部地區有局部短暫陣雨，其他地區及澎湖、金門、馬祖為多雲到晴，午後中南部地區及北部山區亦有局部短暫雷陣雨。
-明日東海北部平均風力將稍減弱。本局將盡力確保其即時性及正確性。
+摘要\enskip---\enskip可以輸入繁體字了。教育雲端服務平臺將進行資安設備調整作業，並於本次作業時程完成後，%
+進行網站功能測試，屆時網路服務將會中斷，造成您的不便，敬請見諒。獲得快速的翻譯。%
+應該還要有一行，不可能只寫那麼少。可是這樣還不夠多，還不會換行。可以再給我多一點嗎，我很需要換下一行。%
+臺灣東部地區有局部短暫陣雨，其他地區及澎湖、金門、馬祖為多雲到晴，午後中南部地區及北部山區亦有局部短暫雷陣雨。%
+明日東海北部平均風力將稍減弱。本局將盡力確保其即時性及正確性。%
 \end{abstract}
 
 \begin{keywords}
-關鍵字\enskip---\enskip社群媒體、自動化內容分析、社會網絡分析、數位行動主義、政治參與
+關鍵字\enskip---\enskip社群媒體、自動化內容分析、社會網絡分析、數位行動主義、政治參與%
 \end{keywords}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section*{一、緒論}
 
-社群網站的興起不僅改變了我們的社交生活，更改變了許多國家政治與權力的運作規則。
-在國內外皆有愈來愈多政治團體與公民團體透過網路來散佈其理念；
-許多具引響力的社會運動也是透過網路來連結潛在支持者或動員大眾；
-網路工具的靈活運用甚至還成為候選人能否贏得選舉的關鍵。
+社群網站的興起不僅改變了我們的社交生活，更改變了許多國家政治與權力的運作規則。%
+在國內外皆有愈來愈多政治團體與公民團體透過網路來散佈其理念；%
+許多具引響力的社會運動也是透過網路來連結潛在支持者或動員大眾；%
+網路工具的靈活運用甚至還成為候選人能否贏得選舉的關鍵。%
 
-這種利用網際網路來號召群眾、表達訴求的作法被稱為數位行動主義（digital activism）。
-發生在伊朗的綠色革命（Green Movement）、北非及中東的阿拉伯之春（Arab Spring）、
-美國的佔領華爾街運動（Occupy Wall Street），皆被人們普遍認為與網際網路，特別是社群媒體，有密切的關連。
-網際網路、社群媒體對社會與政治的影響也成為許多學者關注的新焦點。
+這種利用網際網路來號召群眾、表達訴求的作法被稱為數位行動主義（digital activism）。%
+發生在伊朗的綠色革命（Green Movement）、北非及中東的阿拉伯之春（Arab Spring）、%
+美國的佔領華爾街運動（Occupy Wall Street），皆被人們普遍認為與網際網路，特別是社群媒體，有密切的關連。%
+網際網路、社群媒體對社會與政治的影響也成為許多學者關注的新焦點。%
 
-同樣的趨勢也發生在台灣。
-從洪仲丘事件、太陽花學運到反黑箱課綱運動，網際網路均對這些社會運動的促成扮演了相當關鍵的角色。
-這也讓許多社會學家、政治學家、傳播學家與計算機科學家開始對台灣的數位行動主義熱潮產生興趣。
-這不但是一個相當新穎的、跨領域的研究主題，這方面的研究對當今台灣社會也是相當重要的。
+同樣的趨勢也發生在台灣。%
+從洪仲丘事件、太陽花學運到反黑箱課綱運動，網際網路均對這些社會運動的促成扮演了相當關鍵的角色。%
+這也讓許多社會學家、政治學家、傳播學家與計算機科學家開始對台灣的數位行動主義熱潮產生興趣。%
+這不但是一個相當新穎的、跨領域的研究主題，這方面的研究對當今台灣社會也是相當重要的。%
 
-2016 年總統選舉競選期間，各政黨、候選人、利益團體與意見領袖皆大量使用
-臉書粉絲專頁（Facebook Pages）來與人民互動並宣揚其政治理念。
-多數民眾也相信這些網路宣傳確實有效引響了選舉的得票數。
-然而這些社群網站上的政治活動是否存在著某些機制？我們能夠利用電腦來分析這些現象嗎？還有許許多多的問題有待我們回答。
-本研究的目的便是嘗試使用資訊科技，以創新的方法分析這些使用者在臉書粉絲專頁上的公開貼文，探討使用者於社群網站上之政治活動的模式。
-由於在台灣推特（Twitter）較不盛行，人們使用的社群網站以臉書（Facebook）為主，因此本研究的重心也將放在臉書上。
+2016 年總統選舉競選期間，各政黨、候選人、利益團體與意見領袖皆大量使用%
+臉書粉絲專頁（Facebook Pages）來與人民互動並宣揚其政治理念。%
+多數民眾也相信這些網路宣傳確實有效引響了選舉的得票數。%
+然而這些社群網站上的政治活動是否存在著某些機制？我們能夠利用電腦來分析這些現象嗎？還有許許多多的問題有待我們回答。%
+本研究的目的便是嘗試使用資訊科技，以創新的方法分析這些使用者在臉書粉絲專頁上的公開貼文，探討使用者於社群網站上之政治活動的模式。%
+由於在台灣推特（Twitter）較不盛行，人們使用的社群網站以臉書（Facebook）為主，因此本研究的重心也將放在臉書上。%
 
 \subsection*{對數位行動主義的批判}
 
-儘管人們普遍同意數位行動主義能有效促進民主政治，這個趨勢仍然伴隨了一些潛在的隱憂。
-常見對數位行動主義的批評包含：
- (1) 數位落差（digital divide）：
-由於經濟、教育等差異，有些族群缺少機會接觸資訊科技，或者沒有能力使用資訊科技。
- (2) 民粹主義（populism）：
-網路本質上便具有民粹主義、安那其（anarchy）、去中心化（decentralization）等特性，網路輿論的品質可能偏低。
- (3) 懶人行動主義（slacktivism）：
-並沒有參與什麼實際的行動，僅是在網路上分享自己關心的社會議題，便自以為自己已經對這個議題做出了貢獻。
- (4) 鍵擊行動主義（clicktivism）：
-類似懶人行動主義，若一味地追求點擊率、做網路行銷，可能反而會忽略了實際的行動。
- (5) 網路巴爾幹化（cyberbalkanization）：
-由於商業壟斷、政治審查、或是個人不願意接觸與自己立場相左的訊息等因素，使網際網路逐漸分裂、解體。
+儘管人們普遍同意數位行動主義能有效促進民主政治，這個趨勢仍然伴隨了一些潛在的隱憂。%
+常見對數位行動主義的批評包含：%
+\,(1) 數位落差（digital divide）：%
+由於經濟、教育等差異，有些族群缺少機會接觸資訊科技，或者沒有能力使用資訊科技。%
+\,(2) 民粹主義（populism）：%
+網路本質上便具有民粹主義、安那其（anarchy）、去中心化（decentralization）等特性，網路輿論的品質可能偏低。%
+\,(3) 懶人行動主義（slacktivism）：%
+並沒有參與什麼實際的行動，僅是在網路上分享自己關心的社會議題，便自以為自己已經對這個議題做出了貢獻。%
+\,(4) 鍵擊行動主義（clicktivism）：%
+類似懶人行動主義，若一味地追求點擊率、做網路行銷，可能反而會忽略了實際的行動。%
+\,(5) 網路巴爾幹化（cyberbalkanization）：%
+由於商業壟斷、政治審查、或是個人不願意接觸與自己立場相左的訊息等因素，使網際網路逐漸分裂、解體。%
 
 \subsection*{資訊科技與人文社會跨領域研究的挑戰與契機}
 
-近年來，愈來愈多學者開始嘗試將計算機科學應用於人文社會科學領域，
-建立了數位典藏（digital archives）、數位人文（digital humanities）、計算社會科學（computational social science）、
-計算社會學（computational sociology）、社會模擬（social simulation）等新興研究領域。
-然而，這樣的跨領域研究是否真的有價值一直是備受爭議的。
-以下舉出一些此類研究常受到的批評，以及我從事此類研究的立場。
+近年來，愈來愈多學者開始嘗試將計算機科學應用於人文社會科學領域，%
+建立了數位典藏（digital archives）、數位人文（digital humanities）、計算社會科學（computational social science）、%
+計算社會學（computational sociology）、社會模擬（social simulation）等新興研究領域。%
+然而，這樣的跨領域研究是否真的有價值一直是備受爭議的。%
+以下舉出一些此類研究常受到的批評，以及我從事此類研究的立場。%
 
-常見對數位人文的批評包含：
- (1) 只是用一些空洞的戲法來賣弄他們的研究能力，而沒有真正做出什麼新的分析。
- (2) 容易忽略種族、階級、性別、文化、意識型態等面向。
- (3) 在這個一切都已經被商品化了的現代社會中，人文學科日漸式微。但數位人文卻頂著科技的光環，而獲得了相當高的經費與聲望。
- (4) 研究者的背景不夠多元，其研究可能帶有某些偏見。
+常見對數位人文的批評包含：%
+\,(1) 只是用一些空洞的戲法來賣弄他們的研究能力，而沒有真正做出什麼新的分析。%
+\,(2) 容易忽略種族、階級、性別、文化、意識型態等面向。%
+\,(3) 在這個一切都已經被商品化了的現代社會中，人文學科日漸式微。但數位人文卻頂著科技的光環，而獲得了相當高的經費與聲望。%
+\,(4) 研究者的背景不夠多元，其研究可能帶有某些偏見。%
 
-常見對社會模擬的批評包含：
- (1) 將現實社會過度地簡化為一般化的法則。
- (2) 模擬的成果仰賴預先建立好的模型，難以發現新的法則。
- (3) 預先建立的模型往往充滿偏見。
- (4) 模擬的成果並不能反映出現實社會的情況。
+常見對社會模擬的批評包含：%
+\,(1) 將現實社會過度地簡化為一般化的法則。%
+\,(2) 模擬的成果仰賴預先建立好的模型，難以發現新的法則。%
+\,(3) 預先建立的模型往往充滿偏見。%
+\,(4) 模擬的成果並不能反映出現實社會的情況。%
 
-我的回應是，我認為傳統社會科學研究法仍是不可或缺的：
- (1) 並非所有問題都適合使用電腦來分析或模擬，有些現象無法被量化或歸納出一般化的法則。
- (2) 人文社會科學做的不只是資料分析、統計而已，還包含人文關懷、詮釋、思辨、批判等。
- (3) 因此田野工作、民族誌、訪談等研究法仍有其彌足珍貴的價值。
+我的回應是，我認為傳統社會科學研究法仍是不可或缺的：%
+\,(1) 並非所有問題都適合使用電腦來分析或模擬，有些現象無法被量化或歸納出一般化的法則。%
+\,(2) 人文社會科學做的不只是資料分析、統計而已，還包含人文關懷、詮釋、思辨、批判等。%
+\,(3) 因此田野工作、民族誌、訪談等研究法仍有其彌足珍貴的價值。%
 
-然而資訊科技仍然能對人文學科做出貢獻：
- (1) 數位人文提供了一個全新的視野來探究傳統上屬於人文社會科學領域的問題。
- (2) 資訊科技能幫助人文學者更有效率地獲得知識。
- (3) 資料探勘（data mining）、自然語言處理（natural language processing）等技術使一些過去被認為窒礙難行的研究成為可能。
+然而資訊科技仍然能對人文學科做出貢獻：%
+\,(1) 數位人文提供了一個全新的視野來探究傳統上屬於人文社會科學領域的問題。%
+\,(2) 資訊科技能幫助人文學者更有效率地獲得知識。%
+\,(3) 資料探勘（data mining）、自然語言處理（natural language processing）等技術使一些過去被認為窒礙難行的研究成為可能。%
 
 \section*{二、文獻探討}
 
-過去已有多位學者考察了社群網站在競選活動中的使用，
-例如 Larsson and Moe (2012) 研究了 2010 年瑞典選舉競選期間推特的使用。\cite{c1}
-該研究的作法是，蒐集競選期間含有特定 hashtag 的推文，進行社會網絡分析（social network analysis）。
+過去已有多位學者考察了社群網站在競選活動中的使用，%
+例如 Larsson and Moe (2012) 研究了 2010 年瑞典選舉競選期間推特的使用。\cite{c1} %
+該研究的作法是，蒐集競選期間含有特定 hashtag 的推文，進行社會網絡分析（social network analysis）。%
 
-該研究做了以下分析：
- (1) 不同時間推文數量的變化。
- (2) 各種推文類型（一般、提及、轉推）所佔的比例。
- (3) 列出最活躍的使用者及其推文數量，並調查其身份背景。
- (4) 活躍用戶的「提及」網絡圖（透過資料視覺化）。
- (5) 呈上，將使用者分為發送者、接受者、兩者皆是，並調查其身份背景。
- (6) 活躍用戶的「轉推」網絡圖（透過資料視覺化）。
- (7) 呈上，將使用者分為轉推者、被轉推者、兩者皆是，並調查其身份背景。
+該研究做了以下分析：%
+\,(1) 不同時間推文數量的變化。%
+\,(2) 各種推文類型（一般、提及、轉推）所佔的比例。%
+\,(3) 列出最活躍的使用者及其推文數量，並調查其身份背景。%
+\,(4) 活躍用戶的「提及」網絡圖（透過資料視覺化）。%
+\,(5) 呈上，將使用者分為發送者、接受者、兩者皆是，並調查其身份背景。%
+\,(6) 活躍用戶的「轉推」網絡圖（透過資料視覺化）。%
+\,(7) 呈上，將使用者分為轉推者、被轉推者、兩者皆是，並調查其身份背景。%
 
-該研究發現：
- (1) 推文數量的變化反應了線下競選活動的情勢。
- (2) 大部份的推文都是由少部份的活躍用戶所發出。
- (3) 大部份的活躍用戶都是政治菁英，然而，平民的聲音仍具有一定的影響力。
- (4) 大部份的推文都是一般推文，然而，許多活躍用戶仍會在推特上與人討論。
+該研究發現：%
+\,(1) 推文數量的變化反應了線下競選活動的情勢。%
+\,(2) 大部份的推文都是由少部份的活躍用戶所發出。%
+\,(3) 大部份的活躍用戶都是政治菁英，然而，平民的聲音仍具有一定的影響力。%
+\,(4) 大部份的推文都是一般推文，然而，許多活躍用戶仍會在推特上與人討論。%
 
-然而該研究也具有以下限制：
- (1) 只有極少數的民眾有使用推特。
- (2) 只蒐集含有特定 hashtag 的推文。
- (3) 應分析不同情境下的使用情形，加以比較。
-另外，該研究也讓我想到一個值得進一步探究的問題，那就是，如何區別真人用戶與機器用戶？
+然而該研究也具有以下限制：%
+\,(1) 只有極少數的民眾有使用推特。%
+\,(2) 只蒐集含有特定 hashtag 的推文。%
+\,(3) 應分析不同情境下的使用情形，加以比較。%
+另外，該研究也讓我想到一個值得進一步探究的問題，那就是，如何區別真人用戶與機器用戶？%
 
-另外 Zhang et al. (2010) 則研究了社群網站對公民的政治態度與行為的引響。\cite{c2}
-該研究參考了以下既有理論：
- (1) 社會資本（social capital）、大眾媒體（mass media）、人際討論（interpersonal discussion）、
-社群網站（social networking sites）都會影響公民參與（civic participation）和政治參與（political participation）。
- (2) 影響個人的政治態度與行為的因子有：政治興趣（political interest）、政治效能（political efficacy）、
-政治信任（political trust）、政黨認同（party identification）。
+另外 Zhang et al. (2010) 則研究了社群網站對公民的政治態度與行為的引響。\cite{c2} %
+該研究參考了以下既有理論：%
+\,(1) 社會資本（social capital）、大眾媒體（mass media）、人際討論（interpersonal discussion）、%
+社群網站（social networking sites）都會影響公民參與（civic participation）和政治參與（political participation）。%
+\,(2) 影響個人的政治態度與行為的因子有：政治興趣（political interest）、政治效能（political efficacy）、%
+政治信任（political trust）、政黨認同（party identification）。%
 
-該研究的作法是採用電話調查，
-應變數（dependent variable）為政治參與、公民參與、對政府的信任，
-自變數（independent variable）為社群網站之依賴、政治之人際討論，
-控制變數（control variable）為政治效能、意識形態、政治興趣、年齡、性別、種族、教育程度。
-最後，進行階層式迴歸分析（hierarchical regression analysis）。
+該研究的作法是採用電話調查，%
+應變數（dependent variable）為政治參與、公民參與、對政府的信任，%
+自變數（independent variable）為社群網站之依賴、政治之人際討論，%
+控制變數（control variable）為政治效能、意識形態、政治興趣、年齡、性別、種族、教育程度。%
+最後，進行階層式迴歸分析（hierarchical regression analysis）。%
 
-該研究發現：
- (1) 社群網站的使用與公民參與的提升呈現顯著的正相關，與政治參與、對政府的信任則無明顯關聯。
- (2) 討論政治議題有助於促進公民參與和政治參與，無助於提升對政府的信任。
- (3) 教育程度愈高，愈有可能參與公民活動和政治活動，但對政府的信任卻愈低。
- (4) 然而，政治效能感較高者，其政治信任感也較高。
+該研究發現：%
+\,(1) 社群網站的使用與公民參與的提升呈現顯著的正相關，與政治參與、對政府的信任則無明顯關聯。%
+\,(2) 討論政治議題有助於促進公民參與和政治參與，無助於提升對政府的信任。%
+\,(3) 教育程度愈高，愈有可能參與公民活動和政治活動，但對政府的信任卻愈低。%
+\,(4) 然而，政治效能感較高者，其政治信任感也較高。%
 
-然而該研究也具有以下限制：
- (1) 樣本可能不夠具代表性，有超過四分之三的受訪者都完全不依賴社群網站。
- (2) 除了公民參與／政治參與的二分法外，是否還有更適當的分類法？
-另外，該研究也讓我想到兩個值得進一步探究的問題：
- (1) 調查結果顯示社群網站的使用無助於促進政治參與，這項發現在東方國家也成立嗎？
- (2) 調查結果顯示年長者較積極參與政治活動，當今台灣社會也是如此嗎？
+然而該研究也具有以下限制：%
+\,(1) 樣本可能不夠具代表性，有超過四分之三的受訪者都完全不依賴社群網站。%
+\,(2) 除了公民參與／政治參與的二分法外，是否還有更適當的分類法？%
+另外，該研究也讓我想到兩個值得進一步探究的問題：%
+\,(1) 調查結果顯示社群網站的使用無助於促進政治參與，這項發現在東方國家也成立嗎？%
+\,(2) 調查結果顯示年長者較積極參與政治活動，當今台灣社會也是如此嗎？%
 
-最後 Hosch-Dayican et al. (2016) 則研究了 2012 年德國議會選舉競選期間公民如何在推特上遊說他人。\cite{c3}
-其研究方法為：
- (1) 資料蒐集（data collection）：
-先選定數個 hashtag，再透過滾雪球抽樣（snowball sampling），找出其他相關的 hashtag。
-蒐集選舉期間含有這些 hashtag 的推文。
- (2) 資料清理（data cleaning）：
-接著，需刪去誤判的推文。
-先刪去語言與地區皆不符的推文，再從剩下的推文中篩選出直接與選舉有關的推文。
- (3) 操作化（operationalization）：
-承上，先將推文分為「競選活動」與「非競選活動」兩種類型，再將屬於「競選活動」的推文分為
-「說服型競選（persuasive campaigning）」與「攻擊型競選（negative campaigning）」兩種類型。
- (4) 自動化內容分析（automated content analysis）：
-以上篩選與分類的過程仰賴質化內容分析（qualitative content analysis）。
-採用監督式學習（supervised learning），先由研究者做一小部份的樣本，再用它來訓練機器。
-具體作法包含克氏 α 係數（Krippendorff's alpha）、單純貝氏分類器（naive Bayes classifier）、
-一元語法（unigram）與二元語法（bigram）、詞幹提取（stemming）、十等分交叉驗證
-（10-fold cross-validation）等等。
+最後 Hosch-Dayican et al. (2016) 則研究了 2012 年德國議會選舉競選期間公民如何在推特上遊說他人。\cite{c3} %
+其研究方法為：%
+\,(1) 資料蒐集（data collection）：%
+先選定數個 hashtag，再透過滾雪球抽樣（snowball sampling），找出其他相關的 hashtag。%
+蒐集選舉期間含有這些 hashtag 的推文。%
+\,(2) 資料清理（data cleaning）：%
+接著，需刪去誤判的推文。%
+先刪去語言與地區皆不符的推文，再從剩下的推文中篩選出直接與選舉有關的推文。%
+\,(3) 操作化（operationalization）：%
+承上，先將推文分為「競選活動」與「非競選活動」兩種類型，再將屬於「競選活動」的推文分為%
+「說服型競選（persuasive campaigning）」與「攻擊型競選（negative campaigning）」兩種類型。%
+\,(4) 自動化內容分析（automated content analysis）：%
+以上篩選與分類的過程仰賴質化內容分析（qualitative content analysis）。%
+採用監督式學習（supervised learning），先由研究者做一小部份的樣本，再用它來訓練機器。%
+具體作法包含克氏 α 係數（Krippendorff's alpha）、單純貝氏分類器（naive Bayes classifier）、%
+一元語法（unigram）與二元語法（bigram）、詞幹提取（stemming）、十等分交叉驗證%
+（10-fold cross-validation）等等。%
 
-該研究做了以下分析：
- (1) 各種推文類型（非競選活動、說服型競選、攻擊型競選）與各種用戶類型（政黨／政治人物、媒體／記者、平民）
-的組合的推文所佔的比例。
- (2) 從屬於「競選活動」的推文中隨機抽樣，進行更深入的內容分析。
-不論是「說服型競選」還是「攻擊型競選」，其推文皆可分為直接宣傳（明確表態要／不要投給誰）
-與間接宣傳（僅表達支持／反對意見）兩種。
+該研究做了以下分析：%
+\,(1) 各種推文類型（非競選活動、說服型競選、攻擊型競選）與各種用戶類型（政黨／政治人物、媒體／記者、平民）%
+的組合的推文所佔的比例。%
+\,(2) 從屬於「競選活動」的推文中隨機抽樣，進行更深入的內容分析。%
+不論是「說服型競選」還是「攻擊型競選」，其推文皆可分為直接宣傳（明確表態要／不要投給誰）%
+與間接宣傳（僅表達支持／反對意見）兩種。%
 
-該研究發現：
- (1) 平民相當投入線上政治活動。
- (2) 政黨／政治人物最常採取說服型競選，媒體／記者及平民最常發佈非競選活動的推文。
- (3) 相較於其他用戶類型，平民採取攻擊型競選的比例最高。
-儘管在所有的用戶類型中，用戶採取攻擊型競選的比例都是最低的。
- (4) 說服型競選相當程度地採用「轉推」的形式。
-直接宣傳的部份，常出現含有投票動機或投票行為的貼文，尤其是在選舉前夕和選舉當天。
-間接宣傳的部份，常出現對新聞報導、採訪、辯論的回應。
- (5) 攻擊型競選則多為間接宣傳，採用「轉推」的形式，引用政黨／政治人物的推文。
-比起政治菁英，平民的推文更包含了對採訪與辯論的回應，以及對政黨／政治人物的不滿與憤怒。
- (6) 平民被歸類為攻擊型競選的推文大部份都是在宣洩情緒與意見，而不是以進行攻擊型競選為目的。
+該研究發現：%
+\,(1) 平民相當投入線上政治活動。%
+\,(2) 政黨／政治人物最常採取說服型競選，媒體／記者及平民最常發佈非競選活動的推文。%
+\,(3) 相較於其他用戶類型，平民採取攻擊型競選的比例最高。%
+儘管在所有的用戶類型中，用戶採取攻擊型競選的比例都是最低的。%
+\,(4) 說服型競選相當程度地採用「轉推」的形式。%
+直接宣傳的部份，常出現含有投票動機或投票行為的貼文，尤其是在選舉前夕和選舉當天。%
+間接宣傳的部份，常出現對新聞報導、採訪、辯論的回應。%
+\,(5) 攻擊型競選則多為間接宣傳，採用「轉推」的形式，引用政黨／政治人物的推文。%
+比起政治菁英，平民的推文更包含了對採訪與辯論的回應，以及對政黨／政治人物的不滿與憤怒。%
+\,(6) 平民被歸類為攻擊型競選的推文大部份都是在宣洩情緒與意見，而不是以進行攻擊型競選為目的。%
 
-該文作者建議後續研究者，進一步分析「轉推」網絡，並探討線上競選的後果。
-另外，該研究也讓我想到幾個值得進一步探究的問題：
- (1) 這份研究只有區別政治菁英與平民，忽略了使用者間的其他差異（例如社會經濟背景）。
- (2) 採用監督式學習能降低解讀反諷文章的錯誤率到什麼程度？
- (3) 台灣的使用者是否也具有如此高的素養，僅將近 20\% 的網路貼文被歸類為攻擊型競選？
+該文作者建議後續研究者，進一步分析「轉推」網絡，並探討線上競選的後果。%
+另外，該研究也讓我想到幾個值得進一步探究的問題：%
+\,(1) 這份研究只有區別政治菁英與平民，忽略了使用者間的其他差異（例如社會經濟背景）。%
+\,(2) 採用監督式學習能降低解讀反諷文章的錯誤率到什麼程度？%
+\,(3) 台灣的使用者是否也具有如此高的素養，僅將近 20\% 的網路貼文被歸類為攻擊型競選？%
 
 \section*{三、研究問題與方法}
 
-本研究分析的資料來自 2016 年台灣總統選舉競選期間臉書各大政治性粉絲專頁之公開資料。
-本研究進行的分析包含以下四個部份：
+本研究分析的資料來自 2016 年台灣總統選舉競選期間臉書各大政治性粉絲專頁之公開資料。%
+本研究進行的分析包含以下四個部份：%
 \begin{itemize}
 \item 貼文數量對時間的關係圖。\\
-各政黨／侯選人／意見領袖的貼文數量。
+各政黨／侯選人／意見領袖的貼文數量。%
 \item 每個時間區間最熱門的關鍵字分別是哪些？\\
 嘗試透過關鍵字分析，\\
-找出各政黨／侯選人／意見領袖最重視的議題。
+找出各政黨／侯選人／意見領袖最重視的議題。%
 \item 有多少比例的貼文是攻擊型競選？\\
 哪些政黨／候選人／意見領袖、什麼時候\\
-最常使用攻擊型競選？
+最常使用攻擊型競選？%
 \item 各發文者與其分享的貼文的來源之網絡圖。\\
-特定族群是否會傾向於分享特定來源的資訊？
+特定族群是否會傾向於分享特定來源的資訊？%
 \end{itemize}
 
-本研究主要採用量化研究（quantitative research），著重於資料分析。
-在研究方法上，本研究結合了多種現代計算機科學理論與技術：
+本研究主要採用量化研究（quantitative research），著重於資料分析。%
+在研究方法上，本研究結合了多種現代計算機科學理論與技術：%
 \begin{itemize}
-\item 資料探勘（data mining）
-\item 機器學習（machine learning）
-\item 自然語言處理（natural language processing）
-\item 資料視覺化（data visualization）
+\item 資料探勘（data mining）%
+\item 機器學習（machine learning）%
+\item 自然語言處理（natural language processing）%
+\item 資料視覺化（data visualization）%
 \end{itemize}
 
-本研究具體的研究步驟如下所述。
+本研究具體的研究步驟如下所述。%
 
 \subsection*{資料蒐集（data collection）}
 
-使用 Facebook Graph API 蒐集競選期間（投票日前三個月至投票日止）台灣各大政治性粉絲專頁之公開資料。
-本研究蒐集的資料以貼文為主，同時亦包含一些附屬的詮釋資料（metadata），例如發文時間、分享的連結等。
-為保護個人隱私，本研究只蒐集粉絲專頁上的公開資料，不蒐集任何個別使用者的資料。
+使用 Facebook Graph API 蒐集競選期間（投票日前三個月至投票日止）台灣各大政治性粉絲專頁之公開資料。%
+本研究蒐集的資料以貼文為主，同時亦包含一些附屬的詮釋資料（metadata），例如發文時間、分享的連結等。%
+為保護個人隱私，本研究只蒐集粉絲專頁上的公開資料，不蒐集任何個別使用者的資料。%
 
-採用何種方法決定欲蒐集的粉絲專頁清單，對研究結果有極大的引響。
-為確保本研究的中立性，我參考 Socialbakers \cite{c4} 及 Likeboy \cite{c5} 提供之社群媒體統計數據，
-輔以我個人的自身經驗，整理出一份台灣熱門政治性粉絲專頁的清單。
-得到粉絲專頁清單後，我還做了進一步的篩選。
-我查詢這些粉絲專頁最新的按讚數，將它們依按讚數由高到低排序。
-擁有超過一萬個讚的粉絲專頁共計有 135 個，這些粉絲專頁便是我最終選定的蒐集對象。
+採用何種方法決定欲蒐集的粉絲專頁清單，對研究結果有極大的引響。%
+為確保本研究的中立性，我參考 Socialbakers \cite{c4} 及 Likeboy \cite{c5} 提供之社群媒體統計數據，%
+輔以我個人的自身經驗，整理出一份台灣熱門政治性粉絲專頁的清單。%
+得到粉絲專頁清單後，我還做了進一步的篩選。%
+我查詢這些粉絲專頁最新的按讚數，將它們依按讚數由高到低排序。%
+擁有超過一萬個讚的粉絲專頁共計有 135 個，這些粉絲專頁便是我最終選定的蒐集對象。%
 
-完成後，本研究共取得了 18,967 筆臉書貼文，來自 135 個台灣熱門的政治性粉絲專頁。
+完成後，本研究共取得了 18,967 筆臉書貼文，來自 135 個台灣熱門的政治性粉絲專頁。%
 
 \subsection*{斷詞（word segmentation）}
 
-下個步驟是進行文本斷詞，也就是將一篇文章拆解成一個個的單詞。
-例如「維根斯坦是二十世紀最有影響力的哲學家之一。」這句話可以被拆解成
-「維根斯坦」、「是」、「二十世紀」、「最」、「有」、「影響力」、「的」、「哲學家」、「之一」、「。」等單詞。
-斷詞是自然語言處理中最基本的步驟，文本必需先經過斷詞處理，才得以進一步分析。
+下個步驟是進行文本斷詞，也就是將一篇文章拆解成一個個的單詞。%
+例如「維根斯坦是二十世紀最有影響力的哲學家之一。」這句話可以被拆解成%
+「維根斯坦」、「是」、「二十世紀」、「最」、「有」、「影響力」、「的」、「哲學家」、「之一」、「。」等單詞。%
+斷詞是自然語言處理中最基本的步驟，文本必需先經過斷詞處理，才得以進一步分析。%
 
-本研究採用中央研究院資訊科學研究所中文詞知識庫小組所研發之中文斷詞系統 \cite{c6}，
-搭配我自行開發之中文斷詞系統 Python 客戶端程式 \cite{c7}，為蒐集到的貼文進行斷詞。
-本研究之所以選擇中央研究院的中文斷詞系統，是因為此系統正確率高（其研發團隊亦稱此系統之正確率約為 95\% $\sim$ 96\%），
-且相較於其他非台灣開發的中文斷詞系統，此系統對台灣本地的文本有較好的表現。
-若要採用其他斷詞系統，可能得用台灣本地的語料重新訓練，才能達到同樣的表現。
-另外，良好的未知詞辨識能力也是此系統的一大優點。
+本研究採用中央研究院資訊科學研究所中文詞知識庫小組所研發之中文斷詞系統 \cite{c6}，%
+搭配我自行開發之中文斷詞系統 Python 客戶端程式 \cite{c7}，為蒐集到的貼文進行斷詞。%
+本研究之所以選擇中央研究院的中文斷詞系統，是因為此系統正確率高（其研發團隊亦稱此系統之正確率約為 95\% $\sim$ 96\%），%
+且相較於其他非台灣開發的中文斷詞系統，此系統對台灣本地的文本有較好的表現。%
+若要採用其他斷詞系統，可能得用台灣本地的語料重新訓練，才能達到同樣的表現。%
+另外，良好的未知詞辨識能力也是此系統的一大優點。%
 
-由於本研究分析的文本是社群網站上的貼文，其形式較不嚴謹，
-常有錯別字、文法錯誤、使用空格或換行代替逗號或句號、夾雜表情符號或特殊字元等情形，
-故我在每則貼文開始斷詞前均會先對貼文進行簡單的預處理（pre-processing）。
-斷詞全部完成後，我更做了完整性測試（integrity test），檢查斷詞前與斷詞後的貼文是否一致。
-測試結果顯示斷詞系統相當穩定，僅極少數（不到 3\%）的貼文含有錯誤（大多是出現亂碼）。
+由於本研究分析的文本是社群網站上的貼文，其形式較不嚴謹，%
+常有錯別字、文法錯誤、使用空格或換行代替逗號或句號、夾雜表情符號或特殊字元等情形，%
+故我在每則貼文開始斷詞前均會先對貼文進行簡單的預處理（pre-processing）。%
+斷詞全部完成後，我更做了完整性測試（integrity test），檢查斷詞前與斷詞後的貼文是否一致。%
+測試結果顯示斷詞系統相當穩定，僅極少數（不到 3\%）的貼文含有錯誤（大多是出現亂碼）。%
 
-為了讓後續的分析更方便，我使用 peewee 物件關係對映（object-relational mapping）套件 \cite{c8}，
-將斷詞後的文本與詮釋資料儲存在資料庫中。
-往後若需查詢文本，只要透過 peewee 即可輕鬆完成，分析的結果也可透過 peewee 存入資料庫。
+為了讓後續的分析更方便，我使用 peewee 物件關係對映（object-relational mapping）套件 \cite{c8}，%
+將斷詞後的文本與詮釋資料儲存在資料庫中。%
+往後若需查詢文本，只要透過 peewee 即可輕鬆完成，分析的結果也可透過 peewee 存入資料庫。%
 
 \subsection*{總體分佈（overall distribution）}
 
-先對研究資料做最初步的分析。
-使用 pandas 資料分析函式庫 \cite{c9} 和 Matplotlib 繪圖函式庫 \cite{c10}
-繪製貼文數量對時間的關係圖以及累計貼文數量對時間的關係圖。
-另外，統計各粉絲專頁分別有多少筆貼文、佔全部貼文的百分比。
+先對研究資料做最初步的分析。%
+使用 pandas 資料分析函式庫 \cite{c9} 和 Matplotlib 繪圖函式庫 \cite{c10} %
+繪製貼文數量對時間的關係圖以及累計貼文數量對時間的關係圖。%
+另外，統計各粉絲專頁分別有多少筆貼文、佔全部貼文的百分比。%
 
 \subsection*{關鍵字擷取（keyword extraction）}
 
-接著，本研究試圖分析貼文的關鍵字，藉以找出競選期間人們關注的焦點。
-由於每筆貼文篇幅不一，且本研究關心的是一個範圍內的貼文的整體特性，
-故本研究不採用「分析單一貼文的關鍵字再將結果整合」的作法，而是「先整合多筆貼文再分析其關鍵字」，如此可得到較好的效果。
+接著，本研究試圖分析貼文的關鍵字，藉以找出競選期間人們關注的焦點。%
+由於每筆貼文篇幅不一，且本研究關心的是一個範圍內的貼文的整體特性，%
+故本研究不採用「分析單一貼文的關鍵字再將結果整合」的作法，而是「先整合多筆貼文再分析其關鍵字」，如此可得到較好的效果。%
 
-本研究進行了三種不同層面的關鍵字分析。
-第一種分析方式是依作者劃分，合併相同粉絲專頁的貼文，分析各粉絲專頁發佈的貼文的關鍵字。
-第二種分析方式是依時間劃分，合併相同時間區間的貼文，分析各時間區間發佈的貼文的關鍵字。
-第三種分析方式是合併所有貼文，將之視為一個整體，分析整個競選期間所有人發佈的貼文的關鍵字。
+本研究進行了三種不同層面的關鍵字分析。%
+第一種分析方式是依作者劃分，合併相同粉絲專頁的貼文，分析各粉絲專頁發佈的貼文的關鍵字。%
+第二種分析方式是依時間劃分，合併相同時間區間的貼文，分析各時間區間發佈的貼文的關鍵字。%
+第三種分析方式是合併所有貼文，將之視為一個整體，分析整個競選期間所有人發佈的貼文的關鍵字。%
 
-透過以上三項分析，我們可以回答：
- (1) 各政黨／侯選人／意見領袖最關心的議題是什麼？
- (2) 人們關注的焦點隨著時間有什麼樣的改變？
- (3) 本次選舉人們最關心什麼？
+透過以上三項分析，我們可以回答：%
+\,(1) 各政黨／侯選人／意見領袖最關心的議題是什麼？%
+\,(2) 人們關注的焦點隨著時間有什麼樣的改變？%
+\,(3) 本次選舉人們最關心什麼？%
 
-在技術上，本研究使用了 SnowNLP 函式庫 \cite{c11} 實作的 TextRank 演算法 \cite{c12}。
-SnowNLP 是一套針對中文的文本處理函式庫，惟其訓練資料僅包含簡體中文文本。
-為符合本研究之需求，本研究對該函式庫做了一些調整。
-本研究替換掉它的斷詞部份，只採用它的 TextRank 模組。
-另外，本研究所使用的停用字（stop word）清單，則是以它的停用字清單為基礎加以改良而成的。
+在技術上，本研究使用了 SnowNLP 函式庫 \cite{c11} 實作的 TextRank 演算法 \cite{c12}。%
+SnowNLP 是一套針對中文的文本處理函式庫，惟其訓練資料僅包含簡體中文文本。%
+為符合本研究之需求，本研究對該函式庫做了一些調整。%
+本研究替換掉它的斷詞部份，只採用它的 TextRank 模組。%
+另外，本研究所使用的停用字（stop word）清單，則是以它的停用字清單為基礎加以改良而成的。%
 
 \subsection*{情感分析（sentiment analysis）}
 
-一個範圍內的貼文，可能都是在談論相近的主題，但每篇貼文所傳達的情感卻有很大的差異，彼此毫無關連。
-因此，與關鍵字擷取不同，情感分析不宜「先整合多筆貼文再分析其情感」，而應該採用「分析單一貼文的情感再將結果整合」的作法。
+一個範圍內的貼文，可能都是在談論相近的主題，但每篇貼文所傳達的情感卻有很大的差異，彼此毫無關連。%
+因此，與關鍵字擷取不同，情感分析不宜「先整合多筆貼文再分析其情感」，而應該採用「分析單一貼文的情感再將結果整合」的作法。%
 
-本研究將貼文分為兩類：說服型競選（persuasive campaigning）貼文，即正面（positive）貼文，
-和攻擊型競選（negative campaigning）貼文，即負面（negative）貼文。
-本研究對攻擊型競選的定義是：貼文內容是以批評反對陣營為主、貼文重點是在批評反對陣營。
-本研究對說服型競選的定義是：非屬攻擊型競選的貼文。
-也就是說，中立的貼文在本研究裡也會被歸類到說服型競選貼文／正面貼文。
+本研究將貼文分為兩類：說服型競選（persuasive campaigning）貼文，即正面（positive）貼文，%
+和攻擊型競選（negative campaigning）貼文，即負面（negative）貼文。%
+本研究對攻擊型競選的定義是：貼文內容是以批評反對陣營為主、貼文重點是在批評反對陣營。%
+本研究對說服型競選的定義是：非屬攻擊型競選的貼文。%
+也就是說，中立的貼文在本研究裡也會被歸類到說服型競選貼文／正面貼文。%
 
-本研究先分析個別貼文的情感，再統計各個時間區間內各個粉絲專頁一共發佈了多少筆貼文、其中攻擊型競選貼文有多少筆、佔全部的百分比。
-基於這些數據，我們可以回答：
- (1) 哪些政黨／候選人／意見領袖最常使用攻擊型競選？
- (2) 什麼時候人們最常使用攻擊型競選？
- (3) 本次選舉有多少比例的貼文是攻擊型競選？
+本研究先分析個別貼文的情感，再統計各個時間區間內各個粉絲專頁一共發佈了多少筆貼文、其中攻擊型競選貼文有多少筆、佔全部的百分比。%
+基於這些數據，我們可以回答：%
+\,(1) 哪些政黨／候選人／意見領袖最常使用攻擊型競選？%
+\,(2) 什麼時候人們最常使用攻擊型競選？%
+\,(3) 本次選舉有多少比例的貼文是攻擊型競選？%
 
-在技術上，本研究使用了我自行實作的單純貝氏分類器（naive Bayes classifier）\cite{c13}。
-單純貝氏分類器雖然原理簡單，但用在情感分析上卻有相當優異的表現。
-單純貝氏分類器又有多種不同的模型，如多項單純貝氏（multinomial naive Bayes）、
-二元化多項單純貝氏（binarized multinomial naive Bayes）、伯努利單純貝氏（Bernoulli naive Bayes）、
-高斯單純貝氏（Gaussian naive Bayes）等，其中又以二元化多項單純貝氏較適合用於情感分析 \cite{c14}，
-故本研究決定實作二元化多項單純貝氏。
+在技術上，本研究使用了我自行實作的單純貝氏分類器（naive Bayes classifier）\cite{c13}。%
+單純貝氏分類器雖然原理簡單，但用在情感分析上卻有相當優異的表現。%
+單純貝氏分類器又有多種不同的模型，如多項單純貝氏（multinomial naive Bayes）、%
+二元化多項單純貝氏（binarized multinomial naive Bayes）、伯努利單純貝氏（Bernoulli naive Bayes）、%
+高斯單純貝氏（Gaussian naive Bayes）等，其中又以二元化多項單純貝氏較適合用於情感分析 \cite{c14}，%
+故本研究決定實作二元化多項單純貝氏。%
 
-二元化多項單純貝氏是從多項單純貝氏發展出來的。
-先去除文章中重覆的單詞，再輸入多項單純貝氏模型，即為二元化多項單純貝氏。
-「二元化」的精神是，只管一個單詞在一篇文章中有沒有出現，不管該單詞在文中究竟出現了多少遍。
-另外，關於此模型的實作，在一些細節上我也有特別處理。
-譬如，我使用對數以避免浮點下溢（floating point underflow），我使用拉普拉斯平滑法（Laplace smoothing）以避免計算結果為零。
+二元化多項單純貝氏是從多項單純貝氏發展出來的。%
+先去除文章中重覆的單詞，再輸入多項單純貝氏模型，即為二元化多項單純貝氏。%
+「二元化」的精神是，只管一個單詞在一篇文章中有沒有出現，不管該單詞在文中究竟出現了多少遍。%
+另外，關於此模型的實作，在一些細節上我也有特別處理。%
+譬如，我使用對數以避免浮點下溢（floating point underflow），我使用拉普拉斯平滑法（Laplace smoothing）以避免計算結果為零。%
 
-我從所有貼文中隨機選取 948 筆（約 5\%）作為訓練／測試資料，這些訓練／測試資料由我手動標記情感類型。
-這些選中的貼文呈均勻分佈（uniform distribution），以確保訓練／測試資料的代表性。
-在這裡我也用了 Matplotlib 來視覺化訓練／測試資料各情感類型的分佈。
+我從所有貼文中隨機選取 948 筆（約 5\%）作為訓練／測試資料，這些訓練／測試資料由我手動標記情感類型。%
+這些選中的貼文呈均勻分佈（uniform distribution），以確保訓練／測試資料的代表性。%
+在這裡我也用了 Matplotlib 來視覺化訓練／測試資料各情感類型的分佈。%
 
-我使用十等分交叉驗證（10-fold cross-validation）來評估模型的正確率。
-將訓練／測試資料分成十等分，其中一分作為測試資料，其餘九分作為訓練資料。
-重覆十次，每次選不同分當測試資料，得到十個正確率估計值。
-取其平均，即為此模型最終的正確率。
+我使用十等分交叉驗證（10-fold cross-validation）來評估模型的正確率。%
+將訓練／測試資料分成十等分，其中一分作為測試資料，其餘九分作為訓練資料。%
+重覆十次，每次選不同分當測試資料，得到十個正確率估計值。%
+取其平均，即為此模型最終的正確率。%
 
 \subsection*{社會互動（social interaction）}
 
-在這裡輸入文字。
+在這裡輸入文字。%
 
 \section*{四、研究結果與討論}
 
-在這裡輸入文字。
+在這裡輸入文字。%
 
 \subsection*{總體分佈（overall distribution）}
 
-在這裡輸入文字。
+在這裡輸入文字。%
 
 \subsection*{關鍵字擷取（keyword extraction）}
 
-在這裡輸入文字。
+在這裡輸入文字。%
 
 \subsection*{情感分析（sentiment analysis）}
 
-結果見表 \ref{t1}。
+結果見表 \ref{t1}。%
 
 \begin{table}[!htbp]
 \caption{這是一張表格}
@@ -400,7 +400,7 @@ cell3 & cell4 \\
 
 \subsection*{社會互動（social interaction）}
 
-結果見圖 \ref{f1}。
+結果見圖 \ref{f1}。%
 
 \begin{figure}[!htbp]
 \centering
@@ -411,7 +411,7 @@ cell3 & cell4 \\
 
 \section*{五、結論}
 
-在這裡輸入文字。
+在這裡輸入文字。%
 
 \addtolength{\textheight}{-12cm}  % This command serves to balance the column lengths
                                   % on the last page of the document manually. It shortens
@@ -424,13 +424,13 @@ cell3 & cell4 \\
 
 \section*{附錄}
 
-在這裡輸入文字。
+在這裡輸入文字。%
 
 \section*{誌謝}
 
-首先，我要感謝我的指導教授孫春在教授，對我的研究給予了許多寶貴的建議。
-另外，我要感謝中央研究院資訊科學研究所中文詞知識庫小組，提供中文斷詞線上服務。
-有您們的協助，這份研究才得以順利完成。
+首先，我要感謝我的指導教授孫春在教授，對我的研究給予了許多寶貴的建議。%
+另外，我要感謝中央研究院資訊科學研究所中文詞知識庫小組，提供中文斷詞線上服務。%
+有您們的協助，這份研究才得以順利完成。%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
