Sun rise, time to sleep...

--- a/7-thesis/main.tex
+++ b/7-thesis/main.tex
@@ -366,7 +366,26 @@ SnowNLP 是一套針對中文的文本處理函式庫，惟其訓練資料僅包
 
 \subsection*{社會互動（social interaction）}
 
-在這裡輸入文字。%
+最後一項分析屬於社會網絡分析（social network analysis）的範疇。%
+在臉書上，我們可以分享他人的貼文，或是將網址夾帶於貼文中，分享網站連結。%
+這裡我想探討的便是這種社群網站上的「分享」網絡。%
+
+對每篇貼文，皆去探查它的作者是誰、它分享了來自哪裡的貼文或連結，將這些「被分享者\textendash分享者」對映整理成一份清單。%
+接著，再將此清單輸入 Gephi 網絡視覺化軟體 \cite{c15}，即可繪製各發文者與其分享的貼文／連結的來源之網絡圖。%
+此網絡圖是一個有向圖（directed graph），藉由此圖，我們將能夠回答：特定族群是否會傾向於分享特定來源的資訊？%
+
+這步驟有幾個技術上的細節需要留意，首先是資料處理的部份。%
+本研究不僅在貼文裡搜尋連結，也檢查臉書貼文的「story」和「link」屬性，尋找所有該貼文分享的貼文和連結。%
+每個連結皆需檢查它是否為短網址（經 goo.gl、bit.ly、tinyurl.com、t.co、ppt.cc 等平台縮短過的網址），%
+如為短網址，必需找出它的原始網址，這樣做出的分析才有意義。%
+所有網址皆只保留其主機名稱（host）部份，捨去其路徑（path）。%
+另外，對於臉書的連結，必需找出它導向的粉絲專頁的名稱。%
+若該臉書連結並非導向粉絲專頁，貼捨棄該連結。%
+最後，排除「自己分享自己的貼文」的情況。%
+
+在網絡圖繪製的部份，我採用了「Force Atlas」佈局演算法（layout algorithm），此演算法最能清楚呈現本次探討的網絡。%
+另外，我也進行了模組性（modularity）分析來偵測社群（community）。%
+最後，為了讓網絡圖更簡潔易讀，我只保留分支度（degree）不小於 3 的節點（node）。%
 
 \section*{四、研究結果與討論}
 
