I don't want to use LaTeX any more kuku...

--- a/7-thesis/main.tex
+++ b/7-thesis/main.tex
@@ -15,15 +15,18 @@
 % on the last page of the document
 
 % The following packages can be found on http:\\www.ctan.org
-\usepackage{graphicx} % for pdf, bitmapped graphics files
-%\usepackage{epsfig} % for postscript graphics files
+\usepackage{graphicx}  % for pdf, bitmapped graphics files
+%\usepackage{epsfig}   % for postscript graphics files
 %\usepackage{mathptmx} % assumes new font selection scheme installed
-%\usepackage{times} % assumes new font selection scheme installed
-%\usepackage{amsmath} % assumes amsmath package installed
-%\usepackage{amssymb} % assumes amsmath package installed
-\usepackage{CJKutf8} % for Chinese character support
-\usepackage{setspace} % Chinese characters need larger line height
-\usepackage{hyperref} % for citing websites in BibTeX
+%\usepackage{times}    % assumes new font selection scheme installed
+%\usepackage{amsmath}  % assumes amsmath package installed
+%\usepackage{amssymb}  % assumes amsmath package installed
+\usepackage{CJKutf8}   % for Chinese character support
+\usepackage{setspace}  % Chinese characters need larger line height
+\usepackage{hyperref}  % for citing websites in BibTeX
+\usepackage{booktabs}  % for publication quality tables
+\usepackage{longtable} % for multi-page tables
+\usepackage{array}     % for fixed column widths
 
 \title{\LARGE \bf
 社群網站上之政治活動分析：以台灣 2016 年總統選舉為例$^{\ast}$
@@ -43,6 +46,9 @@
 \refname{參考文獻}
 \figurename{圖}
 \tablename{表}
+\newcolumntype{L}[1]{>{\raggedright\arraybackslash}p{#1}}
+\newcolumntype{C}[1]{>{\centering\arraybackslash}p{#1}}
+\newcolumntype{R}[1]{>{\raggedleft\arraybackslash}p{#1}}
 
 \maketitle
 \thispagestyle{empty}
@@ -389,11 +395,326 @@ SnowNLP 是一套針對中文的文本處理函式庫，惟其訓練資料僅包
 
 \section*{四、研究結果與討論}
 
-在這裡輸入文字。%
-
 \subsection*{總體分佈（overall distribution）}
 
-在這裡輸入文字。%
+圖 \ref{f1} 是貼文數量對時間的關係圖，橫軸為時間，以日為單位，縱軸為貼文數量，以篇為單位。%
+圖 \ref{f2} 是累計貼文數量對時間的關係圖，橫軸為時間，以日為單位，縱軸為累計貼文數量，以篇為單位。%
+從這兩張圖我們可以看出，隨著投票日的接近，各政黨／侯選人／意見領袖也愈來愈踴躍地在社群網站上發佈貼文。%
+選舉前幾天的貼文數量更達到其餘時間的兩倍以上。%
+
+\begin{figure}[!htbp]
+\centering
+\includegraphics[width=\columnwidth]{quantity_time_graph}
+\caption{貼文數量對時間的關係圖}
+\label{f1}
+\end{figure}
+
+\begin{figure}[!htbp]
+\centering
+\includegraphics[width=\columnwidth]{quantity_time_cumulative_graph}
+\caption{累計貼文數量對時間的關係圖}
+\label{f2}
+\end{figure}
+
+接下來，表 \ref{t1} 列出了各政黨／侯選人／意見領袖的貼文數量，並依貼文數量遞減排序。%
+發佈最多貼文的粉絲專頁是「柯建銘」，其貼文佔了全部貼文的 2.56\%。%
+此次選舉的三位總統候選人也都有相當高的貼文數。%
+此外，有幾個粉絲專頁在競選期間沒有發佈任何貼文（也可能是有發佈貼文但事後又被刪除，%
+或因故無法透過 Facebook Graph API 存取），因此並未出現在表上。%
+
+\onecolumn
+
+\begin{longtable}[c]{@{}lcc@{}}
+\caption{各政黨／侯選人／意見領袖的貼文數量}
+\label{t1}\\
+\toprule
+粉絲專頁名稱 & 貼文數量 & 百分比 \\* \midrule
+\endfirsthead
+\toprule
+粉絲專頁名稱 & 貼文數量 & 百分比 \\* \midrule
+\endhead
+%
+\bottomrule
+\endfoot
+%
+\endlastfoot
+%
+柯建銘 & 485 & 2.56\% \\
+Taiwan Fugue & 361 & 1.90\% \\
+台灣新力量/羅致政粉絲團 & 337 & 1.78\% \\
+宋楚瑜找朋友 & 334 & 1.76\% \\
+反馬英九聯盟 & 330 & 1.74\% \\
+林昶佐 Freddy Lim & 320 & 1.69\% \\
+基進黨（基進側翼） & 319 & 1.68\% \\
+BillyPan 潘建志醫師 & 306 & 1.61\% \\
+宋楚瑜 & 301 & 1.59\% \\
+綠黨 & 297 & 1.57\% \\
+民主進步黨 & 293 & 1.54\% \\
+鄭永金後援會 & 282 & 1.49\% \\
+我是台灣人 (I am Taiwanese) & 281 & 1.48\% \\
+江啟臣服務讚 & 262 & 1.38\% \\
+鄭正鈐 & 259 & 1.37\% \\
+打馬悍將粉絲團 & 255 & 1.34\% \\
+中國國民黨 KMT & 254 & 1.34\% \\
+徐欣瑩 & 250 & 1.32\% \\
+馬躍．比吼 Mayaw Biho & 250 & 1.32\% \\
+蔡英文 Tsai Ing-wen & 249 & 1.31\% \\
+大安推范雲 & 246 & 1.30\% \\
+公民1985行動聯盟 & 246 & 1.30\% \\
+洪慈庸 & 242 & 1.28\% \\
+馬英九下台下台粉絲團 & 241 & 1.27\% \\
+挺馬英九聯盟 & 231 & 1.22\% \\
+呂欣潔 Jennifer Lu & 230 & 1.21\% \\
+王如玄 & 220 & 1.16\% \\
+黃韻涵粉絲頁 & 219 & 1.15\% \\
+社會民主黨 & 219 & 1.15\% \\
+朱立倫 & 214 & 1.13\% \\
+吳秉叡 & 199 & 1.05\% \\
+段宜康 & 198 & 1.04\% \\
+鄭弘儀 & 197 & 1.04\% \\
+陳其邁 Chen Chi-Mai & 195 & 1.03\% \\
+公民廟口-立委在做天在看 & 194 & 1.02\% \\
+時代力量 New Power Party & 194 & 1.02\% \\
+沃草 Watchout & 193 & 1.02\% \\
+林佳龍 & 190 & 1.00\% \\
+鍾佳濱 & 190 & 1.00\% \\
+苗博雅 MiaoPoya & 189 & 1.00\% \\
+徐永明 & 186 & 0.98\% \\
+趙正宇 & 185 & 0.98\% \\
+小聖蚊的治國日記 & 184 & 0.97\% \\
+魏明谷 & 183 & 0.96\% \\
+鄭文燦 & 182 & 0.96\% \\
+好立委 楊瓊瓔 & 179 & 0.94\% \\
+張花冠(小花)縣長 & 177 & 0.93\% \\
+潘孟安 & 176 & 0.93\% \\
+管碧玲 (kuanbiling) & 175 & 0.92\% \\
+白色正義聯盟 & 175 & 0.92\% \\
+蔡正元 & 175 & 0.92\% \\
+我是台灣人．台灣是咱的國家 & 175 & 0.92\% \\
+立法委員 黃國昌 & 170 & 0.90\% \\
+祭止兀 & 169 & 0.89\% \\
+樹黨 & 166 & 0.88\% \\
+不禮貌鄉民團 & 166 & 0.88\% \\
+批踢踢實業坊(Ptt.cc) & 155 & 0.82\% \\
+楊實秋 & 154 & 0.81\% \\
+幸福好粽 鍾易仲 & 150 & 0.79\% \\
+我是新竹人 & 148 & 0.78\% \\
+Appendectomy Project 割闌尾計畫 & 145 & 0.76\% \\
+王金平 & 142 & 0.75\% \\
+特急件小周的人渣文本 & 142 & 0.75\% \\
+王丹网站 Wang Dan's Page & 138 & 0.73\% \\
+民國黨 & 138 & 0.73\% \\
+李進勇 & 137 & 0.72\% \\
+王定宇 & 136 & 0.72\% \\
+徐耀昌加油讚 & 131 & 0.69\% \\
+賴清德 & 130 & 0.69\% \\
+陳菊 (花媽) 市長 & 129 & 0.68\% \\
+我是中壢人 & 124 & 0.65\% \\
+林智堅 & 121 & 0.64\% \\
+游錫堃 & 120 & 0.63\% \\
+徐巧芯 & 119 & 0.63\% \\
+邱鏡淳 & 116 & 0.61\% \\
+醫勞盟 & 115 & 0.61\% \\
+社會民主連線 & 112 & 0.59\% \\
+綠黨桃竹苗支黨部 & 110 & 0.58\% \\
+台灣勞工陣線協會 & 109 & 0.57\% \\
+蔣萬安 & 109 & 0.57\% \\
+費鴻泰（阿力克司） & 109 & 0.57\% \\
+謝長廷 & 107 & 0.56\% \\
+拷秋勤 Kou Chou Ching & 107 & 0.56\% \\
+吳宜臻 & 105 & 0.55\% \\
+洪秀柱 & 105 & 0.55\% \\
+蔡錦隆加油讚 & 103 & 0.54\% \\
+劉文雄（Liu Wen Hsiung） & 101 & 0.53\% \\
+林聰賢 & 98 & 0.52\% \\
+嘉義市長涂醒哲 & 97 & 0.51\% \\
+民主鬥陣 Democracy Tautin & 96 & 0.51\% \\
+nagee & 96 & 0.51\% \\
+島國前進 Taiwan March & 91 & 0.48\% \\
+柯文哲 & 89 & 0.47\% \\
+馮光遠 & 89 & 0.47\% \\
+捍衛苗栗青年聯盟 & 88 & 0.46\% \\
+葉宜津 & 84 & 0.44\% \\
+張承中 & 83 & 0.44\% \\
+張麗善粉絲團 & 80 & 0.42\% \\
+法操FOLLAW & 77 & 0.41\% \\
+民間司法改革基金會 & 74 & 0.39\% \\
+林志嘉 & 70 & 0.37\% \\
+蘇貞昌 & 66 & 0.35\% \\
+全國廢核行動平台 & 64 & 0.34\% \\
+國民黨青年團 & 63 & 0.33\% \\
+反黑箱服貿協議 & 57 & 0.30\% \\
+鍾年晃 & 51 & 0.27\% \\
+鄉民實業坊 & 50 & 0.26\% \\
+馬英九 & 49 & 0.26\% \\
+周芷萱　斬父權獨立劍　老娘就是反骨！ & 49 & 0.26\% \\
+藍白拖的逆襲 & 43 & 0.23\% \\
+林右昌UChange & 42 & 0.22\% \\
+台灣農村陣線 & 42 & 0.22\% \\
+施明德 & 34 & 0.18\% \\
+台北市議員徐弘庭 & 30 & 0.16\% \\
+台北。生生不息。王閔生 & 29 & 0.15\% \\
+反黑箱課綱行動聯盟 & 18 & 0.09\% \\
+吳志剛 & 17 & 0.09\% \\
+黑色島國青年陣線 & 16 & 0.08\% \\
+{[}我是學生，我反旺中{]} 反媒體巨獸青年聯盟 & 15 & 0.08\% \\
+連勝文 & 15 & 0.08\% \\
+反洗腦課綱學生陣線 & 13 & 0.07\% \\
+無限期支持警察 & 12 & 0.06\% \\
+周守訓 & 6 & 0.03\% \\
+方仰寧加油 & 5 & 0.03\% \\
+民進黨台灣民主學院 & 3 & 0.02\% \\
+顧立雄 & 2 & 0.01\% \\
+Tumorectomy Project 割腫瘤計畫 & 1 & 0.01\% \\
+台大法律學生挺318 & 1 & 0.01\% \\* \bottomrule
+\end{longtable}
+
+\begin{longtable}[c]{@{}L{2.45cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}@{}}
+\caption{關鍵字擷取，依作者劃分}
+\label{t2}\\
+\toprule
+粉絲專頁名稱 & \#1 & \#2 & \#3 & \#4 & \#5 & \#6 & \#7 & \#8 & \#9 & \#10 \\* \midrule
+\endfirsthead
+\toprule
+粉絲專頁名稱 & \#1 & \#2 & \#3 & \#4 & \#5 & \#6 & \#7 & \#8 & \#9 & \#10 \\* \midrule
+\endhead
+%
+\bottomrule
+\endfoot
+%
+\endlastfoot
+%
+朱立倫 & 台灣 & 新 & 孩子 & 支持 & 推動 & 政策 & 國民黨 & 北市 & 經濟 & 中 \\
+大安推范雲 & 范雲 & 台灣 & 政治 & 中 & 感謝 & 朋友 & 支持 & 新 & 立委 & 大安 \\
+王丹网站 Wang Dan's Page & 中國 & 中 & 大學 & 朋友 & 運動 & 台灣 & 件 & 國家 & 臺灣 & 老師 \\
+國民黨青年團 & 青年 & 台灣 & 活動 & 力量 & 總統 & 朱立倫 & 主席 & 青年團 & 報名 & 時間 \\
+呂欣潔 Jennifer Lu & 政治 & 欣潔 & 台灣 & 中 & 呂欣潔 & 朋友 & 希望 & 支持 & 新 & 照顧 \\
+管碧玲 (kuanbiling) & 管媽 & 市長 & 台灣 & 高雄 & 朋友 & 旗津 & 中 & 總部 & 市民 & 第一 \\
+段宜康 & 朱立倫 & 國民黨 & 王如玄 & 台灣 & 新 & 公司 & 買 & 委員 & 兩 & 候選人 \\
+鄉民實業坊 & 黑子 & 種 & 書 & 中 & 現場 & 文章 & 真的 & 幫 & Chenglap & 11 \\
+我是台灣人 (I am Taiwanese) & 台灣 & 綠黨 & 聯盟 & 國民黨 & 政黨 & 中 & 政治 & 立委 & 支持 & 新 \\
+林智堅 & 新竹市 & 新竹 & 市民 & 服務 & 中 & 城市 & 客家 & 朋友 & 台灣 & 座 \\
+BillyPan 潘建志醫師 & 醫師 & 台灣 & 潘建志 & 潘 & 潘醫師 & 中 & 支持 & 朋友 & 號 & 感謝 \\
+蔡錦隆加油讚 & 蔡錦隆 & 錦隆 & 台灣 & 總部 & 競選 & 台中 & 鄉親 & 今日 & 立委 & 舉辦 \\
+馬英九 & 臺灣 & 中 & 政府 & 兩 & 阿嬤 & 我國 & 兩岸 & 中華民國 & 國際 & 孩子 \\
+醫勞盟 & 醫師 & 醫療 & 健保 & 醫院 & 元 & 病人 & 醫勞盟 & 人員 & 月 & 健保署 \\
+陳其邁 Chen Chi-Mai & 國民黨 & 元 & 中 & 台灣 & 食品 & 總統 & 民進黨 & 朱立倫 & 抹黑 & 約 \\
+中國國民黨 KMT & 台灣 & 朱立倫 & 國民黨 & 未來 & 經濟 & 兩岸 & 政策 & 立委 & 主席 & 國家 \\
+徐欣瑩 & 台灣 & 欣瑩 & 徐欣瑩 & 民國黨 & 民眾 & 人民 & 中 & 政治 & 主席 & 鄉親 \\
+全國廢核行動平台 & 能源 & 核 & 台電 & 核電 & 核電廠 & 政府 & 核災 & 台灣 & 中 & 核四 \\
+柯文哲 & 台北 & 政府 & 市民 & 市府 & 中 & 台北市 & 臺北市 & 工作 & 台灣 & 臺北 \\
+白色正義聯盟 & 台灣 & 支持 & 白盟 & 民進黨 & 兩岸 & 國民黨 & 小編 & 馬 & 中 & 總統 \\
+台灣勞工陣線協會 & 勞工 & 台灣 & 勞動 & 工作 & 政府 & 工會 & 中國 & 勞陣 & 元 & 經濟 \\
+謝長廷 & 國民黨 & 台灣 & 候選人 & 民進黨 & 總統 & 立委 & 英文 & 蔡 & 兩 & 曾 \\
+柯建銘 & 柯建銘 & 新竹 & 國會 & 新竹市 & 台灣 & 國民黨 & 民進黨 & 柯 & 改革 & 總召 \\
+法操FOLLAW & 檢察官 & 大法客 & 證據 & 法官 & 起訴 & 新 & 案 & 頂 & 司法 & Q \\
+王定宇 & 台南 & 定宇 & 永康 & 國民黨 & 點 & 仁德 & 中 & 來到 & 台灣 & 參加 \\
+鄭永金後援會 & 新竹 & 鄭永金 & 台灣 & 新竹縣 & 鄉親 & 蔡英文 & 支持 & 客家 & 活動 & 感謝 \\
+黃韻涵粉絲頁 & 韻涵 & 活動 & 岡山 & 高雄 & 希望 & 中 & 支持 & 感謝 & 鄉親 & 一同 \\
+小聖蚊的治國日記 & 國民黨 & 台灣 & 朱立倫 & 話 & 馬英九 & 支持 & 新聞 & 民進黨 & 蛆 & 食安 \\
+民主進步黨 & 全文 & 台灣 & 蔡英文 & 號 & 民進黨 & 產業 & 新 & 立委 & 國民黨 & 改革 \\
+周芷萱　斬父權獨立劍　老娘就是反骨！ & 台灣 & 性 & 中 & 種 & 社會 & 女性 & 性別 & 女人 & 工作 & 老娘 \\
+賴清德 & 台南 & 台灣 & 朋友 & 文化 & 市民 & 中 & 新 & 市府 & 台南市 & 感謝 \\
+Taiwan Fugue & 國民黨 & 朱立倫 & 台灣 & 馬英九 & 立委 & 新 & 中國 & 總統 & 王如玄 & 中 \\
+林佳龍 & 台中 & 市府 & 台灣 & 台中市 & 中 & 希望 & 元 & 市民 & 未來 & 活動 \\
+公民廟口-立委在做天在看 & 台灣 & 立委 & 真的 & 種 & 中國 & 想 & 國民黨 & 國會 & 政府 & 中 \\
+吳秉叡 & 新莊 & 台灣 & 秉 & 鄉親 & 大秉 & 新 & 小英 & 立委 & 秉叡 & 中 \\
+張承中 & 政府 & 兩 & 想 & 民調 & 朋友 & 11 & 整合 & 企業 & 公益 & 希望 \\
+幸福好粽 鍾易仲 & 易仲 & 鄉親 & 美濃 & 邱議瑩 & 立委 & 高雄市 & 高雄 & 台灣 & 水 & 鍾易仲 \\
+鄭弘儀 & 寶島 & 台灣 & 大哥 & 世界 & 節目 & 鄭 & 中國 & 聯播網 & 馬英九 & 管理員 \\
+趙正宇 & 正宇 & 桃園 & 活動 & 趙正宇 & 八德 & 改變 & 支持 & 八德區 & 力量 & 新 \\
+我是中壢人 & 中壢 & 桃園 & 仲介 & 台灣 & 學生 & 點 & 學校 & 中 & 時間 & 教學 \\
+王金平 & 國會 & 改革 & 台灣 & 立委 & 國民黨 & 委員 & 立法院 & 支持 & 民進黨 & 人民 \\
+黑色島國青年陣線 & 馬英九 & 人民 & 台灣 & 總統 & 中國 & 馬習會 & 政府 & 中 & 透過 & 國民黨 \\
+邱鏡淳 & 新竹縣 & 台灣 & 鏡淳 & 活動 & 新竹 & 民眾 & 竹東 & 縣府 & 日 & 中 \\
+台灣新力量/羅致政粉絲團 & 板橋 & 台灣 & 羅致政 & 新 & 致政 & 選舉 & 蔡英文 & 朋友 & 中 & 活動 \\
+蔡正元 & 蔡英文 & 台灣 & 政治 & 大陸 & 中國 & 美國 & 兩岸 & 種 & 中 & 民進黨 \\
+林右昌UChange & 基隆 & 台灣 & 基隆市 & 市府 & 昌 & 中心 & 城市 & 右 & 市民 & 活動 \\
+鄭正鈐 & 正鈐 & 新竹 & 新竹市 & 鄭正鈐 & 朋友 & 總部 & 柯建銘 & 選舉 & 中 & 台灣 \\
+葉宜津 & 台灣 & 土地 & 民進黨 & 國家 & 豬 & 感謝 & ㄧ & 喜樹 & 人民 & 支持 \\
+江啟臣服務讚 & 啟臣 & 豐原 & 鄉親 & 新 & 新社 & 東勢 & 中 & 民眾 & 活動 & 服務 \\
+好立委 楊瓊瓔 & 瓊瓔 & 鄉親 & 台中 & 后里 & 楊瓊瓔 & 台灣 & 支持 & 活動 & 孩子 & 潭子 \\
+鍾佳濱 & 屏東 & 台灣 & 佳濱 & 未來 & 縣長 & 期待 & 選舉 & 裡 & 政策 & 新 \\
+台灣農村陣線 & 土地 & 台灣 & 政府 & 農業 & 農村 & 農民 & 徵收 & 中 & 糧食 & 小農 \\
+台北市議員徐弘庭 & 中 & 台灣 & 家 & 市場 & 證所稅 & 好朋友 & 點 & 協會 & 台北 & 委員 \\
+綠黨桃竹苗支黨部 & 台灣 & 綠黨 & 聯盟 & 政治 & 社會民主黨 & 社會 & 環境 & 兩 & 財團 & 人民 \\
+周守訓 & 第一 & 喜樂 & 剩 & 2016 & 聖誕餅 & 祝福 & 老板 & 酷酷 & 盤子 & 永遠 \\
+陳菊 (花媽) 市長 & 高雄 & 台灣 & 中 & 城市 & 朋友 & 市民 & 活動 & 未來 & 文化 & 人民 \\
+挺馬英九聯盟 & 台灣 & 總統 & 民進黨 & 蔡英文 & 中華民國 & 種 & 馬 & 兩岸 & 蔡 & 政治 \\
+沃草 Watchout & 立委 & 立法院 & 候選人 & 中 & 台灣 & 阿草 & 立院 & 臺灣 & 中國 & 國民黨 \\
+張花冠(小花)縣長 & 嘉義 & 嘉義縣 & 文化 & 社區 & 台灣 & 故宮 & 阿里山 & 活動 & 中 & 內 \\
+Appendectomy Project 割闌尾計畫 & 落選 & 闌尾 & 立委 & 罷免 & 割 & 吳育昇 & 委員 & 台灣 & 運動 & 中 \\
+批踢踢實業坊(Ptt.cc) & 鄉民 & 原 & 世界 & 投票 & 真的 & 台灣 & 談 & 專業 & 媒體 & 笑 \\
+林聰賢 & 宜蘭 & 台灣 & 中 & 縣府 & 宜蘭縣 & 朋友 & 新 & 民眾 & 同仁 & 種 \\
+反馬英九聯盟 & 國民黨 & 朱立倫 & 馬英九 & 王如玄 & 立委 & 台灣 & 新 & 政府 & 軍宅 & 中國 \\
+游錫堃 & 台灣 & 總統 & 小英 & 新 & 中 & 國民黨 & 北市 & 朱立倫 & 未 & 民進黨 \\
+我是台灣人．台灣是咱的國家 & 台灣 & 國民黨 & 台灣人 & 中國 & 民進黨 & 中 & 總統 & 國會 & 選舉 & 朱立倫 \\
+馮光遠 & 台灣 & 國民黨 & 片名 & 中 & 馬英九 & 裡 & 眉批 & 朱立倫 & 事 & 吳育昇 \\
+綠黨 & 台灣 & 綠黨 & 中 & 聯盟 & 政治 & 勞工 & 社會民主黨 & 綠社盟 & 環境 & 政府 \\
+民主鬥陣 Democracy Tautin & 台灣 & 中國 & 中 & 貨貿 & 政府 & 人民 & 貿易 & 民主 & 產業 & 談判 \\
+方仰寧加油 & 街頭 & 藝人 & 日 & 國 & 國際 & 2015 & 路 & 海安 & 陳國 & 2000萬 \\
+劉文雄（Liu Wen Hsiung） & 基隆 & 台灣 & 國家 & 民眾 & 政府 & 老百姓 & 財團 & 事 & 花 & 市長 \\
+顧立雄 & 偏鄉 & 高 & 律師 & 募款 & 平台 & 牆 & 20 & 餐會 & 司改會 & 教 \\
+公民1985行動聯盟 & 台灣 & 社會 & 立委 & 種 & 政府 & 真的 & 想 & 國會 & 中 & 兵團 \\
+潘孟安 & 屏東 & 台灣 & 中 & 新 & 種 & 縣府 & 活動 & 推動 & 屏東縣 & 文化 \\
+無限期支持警察 & 警察 & 執法 & 支持 & 員警 & 單位 & 警察局 & 判決 & 同仁 & 人員 & 捍衛 \\
+樹黨 & 樹黨 & 候選人 & 台灣 & 立委 & 樹 & 新 & 號 & 黨 & 樹木 & 政黨 \\
+我是新竹人 & 新竹 & 台灣 & 新竹市 & 綠黨 & 中 & 時間 & 民進黨 & 國民黨 & 元 & 候選人 \\
+{[}我是學生，我反旺中{]} 反媒體巨獸青年聯盟 & 台灣 & 活動 & 月 & NCC & 新 & 頂 & 關係法 & 11 & 公民 & 份 \\
+鄭文燦 & 桃園 & 市府 & 台灣 & 活動 & 桃園市 & 市民 & 計畫 & 包括 & 中心 & 文化 \\
+基進黨（基進側翼） & 台灣 & 中國 & 中 & 基進 & 政治 & 側翼 & 國民黨 & 新 & 社會 & 陳奕齊 \\
+nagee & 台灣 & 中國 & 國民黨 & 政府 & 種 & 國家 & 台灣人 & 人民 & 馬英九 & 中 \\
+民進黨台灣民主學院 & 客家 & 大學 & 青年 & 報名 & 交通 & 電話 & 當選 & 1月 & 參加 & 民主 \\
+林昶佐 Freddy Lim & 林昶佐 & 台灣 & 中 & 支持 & 昶佐 & 林郁方 & 閃靈 & 立委 & 政治 & 萬華 \\
+楊實秋 & 楊實秋 & 國民黨 & 台灣 & 選舉 & 政治 & 支持 & 總統 & 中 & 未來 & 名 \\
+徐耀昌加油讚 & 徐耀昌 & 苗栗 & 縣長 & 縣府 & 舉辦 & 苗栗縣 & 社區 & 活動 & 推動 & 文化 \\
+吳宜臻 & 臻 & 宜 & 苗栗 & 鄉親 & 選舉 & 台灣 & 希望 & 立委 & 小英 & 市長 \\
+徐巧芯 & 民進黨 & 蔡英文 & 總統 & 國民黨 & 主席 & 辯論 & 王如玄 & 民眾 & 支持 & 兩岸 \\
+反黑箱課綱行動聯盟 & 課綱 & 教育部 & 學生 & 教育 & 政治 & 微調 & 台灣 & 政策 & 反 & 會議 \\
+祭止兀 & 支持 & 台灣 & 總統 & 止兀 & 兩 & 票 & 愛 & 選 & 太 & 柯 \\
+立法委員 黃國昌 & 新 & 台灣 & 汐止 & 國昌 & 瑞芳 & 鄉親 & 幸福 & 政治 & 北市 & 社會 \\
+鍾年晃 & 台灣 & 國民黨 & 蔡英文 & 土地 & 中國 & 民進黨 & 共識 & 坪 & 議題 & 馬英九 \\
+蘇貞昌 & 新 & 台灣 & 鄉親 & 立委 & 北市 & 選區 & 國會 & 蔡英文 & 總統 & 參加 \\
+李進勇 & 雲林 & 雲林縣 & 縣府 & 活動 & 元 & 台灣 & 服務 & 補助 & 北港 & 咖啡 \\
+蔡英文 Tsai Ing-wen & 台灣 & 人民 & 中 & 政府 & 社會 & 新 & 國家 & 改革 & 民進黨 & 產業 \\
+捍衛苗栗青年聯盟 & 台灣 & 中國 & 國民黨 & 中 & 立委 & 計畫 & 政府 & 種 & 國家 & 無 \\
+張麗善粉絲團 & 雲林 & 執行長 & 台灣 & 麗善 & 雲嘉南 & 鎔麒 & 中心 & 服務 & 立委 & 行政院 \\
+馬英九下台下台粉絲團 & 國民黨 & 馬英九 & 總統 & 台灣 & 朱立倫 & 新 & 鄉民 & 兩 & 馬 & 元 \\
+宋楚瑜找朋友 & 台灣 & 政府 & 主席 & 宋楚瑜 & 人民 & 總統 & 宋 & 小宋 & 兩 & 國家 \\
+反黑箱服貿協議 & 台灣 & 中國 & 政府 & 民主 & 貨貿 & 中 & 馬 & 地區 & 談判 & 大陸 \\
+不禮貌鄉民團 & 國民黨 & 台灣 & 中國 & 票 & 種 & 政府 & 民進黨 & 裡 & 想 & 選舉 \\
+馬躍．比吼 Mayaw Biho & 馬躍 & 原住民 & 部落 & 文化 & 族人 & 中 & 土地 & 原住民族 & 台灣 & 朋友 \\
+拷秋勤 Kou Chou Ching & 新聞 & 台灣 & 國民黨 & 中國 & 中 & KMT & 新 & 臺灣 & 朱立倫 & 689 \\
+島國前進 Taiwan March & 台灣 & 人民 & 連署 & 落選 & 立委 & 00 & 島國 & 運動 & 政府 & 公投 \\
+社會民主連線 & 政府 & 香港 & 社會 & 梁振英 & 名 & 全民 & 社民 & 市民 & 亦 & 立法會 \\
+魏明谷 & 彰化 & 彰化縣 & 台灣 & 活動 & 縣府 & 中 & 政府 & 民眾 & 高鐵 & 國 \\
+嘉義市長涂醒哲 & 嘉義市 & 嘉義 & 市府 & 市民 & 文化 & 新 & 台灣 & 活動 & 未來 & 健康 \\
+施明德 & 台灣 & 中 & 人民 & 烏魚 & 總統 & 中華民國 & 國民黨 & 國際 & 國軍 & 國家 \\
+Tumorectomy Project 割腫瘤計畫 & None & None & None & None & None & None & None & None & None & None \\
+吳志剛 & 委員 & 門診 & 整合 & 病人 & 市長 & 希望 & 萬華區 & 剛 & 參加 & 物資 \\
+徐永明 & 力量 & 時代 & 台灣 & 國會 & 人民 & 新 & 2016 & 挺 & 政治 & 國民黨 \\
+打馬悍將粉絲團 & 國民黨 & 朱立倫 & 台灣 & 真的 & 中國 & 版主 & 新聞 & 馬英九 & 投票 & 連結 \\
+連勝文 & 朋友 & 創業 & 創意 & 希望 & 兩岸 & 社區 & 台灣 & 中 & 參加 & 活動 \\
+林志嘉 & 台灣 & 台聯 & 中國 & 國民黨 & 中 & 人民 & 總統 & 立法院 & 政府 & 馬英九 \\
+台北。生生不息。王閔生 & 蔡英文 & 兒童 & 台北市 & 服務 & 家庭 & 主席 & 元 & 台灣 & 同志 & 市府 \\
+反洗腦課綱學生陣線 & 課綱 & 立委 & 委員 & 學生 & 微調 & 民進黨 & 歷史 & 點 & 鄭麗君 & 台聯 \\
+台大法律學生挺318 & None & None & None & None & None & None & None & None & None & None \\
+民國黨 & 台灣 & 民國黨 & 政府 & 徐欣瑩 & 人民 & 政策 & 國家 & 經濟 & 主席 & 希望 \\
+社會民主黨 & 台灣 & 社會民主黨 & 立委 & 聯盟 & 中 & 綠社盟 & 勞工 & 政治 & 總統 & 綠黨 \\
+洪秀柱 & 國家 & 黨 & 中 & 兩岸 & 柱柱姐 & 支持 & 國民黨 & 人民 & 希望 & 政治 \\
+蔣萬安 & 萬安 & 朋友 & 民眾 & 活動 & 鄉親 & 臺灣 & 未來 & 希望 & 服務 & 長輩 \\
+苗博雅 MiaoPoya & 阿苗 & 政治 & 台灣 & 立委 & 中 & 國會 & 新 & 馬習會 & 社會 & 支持 \\
+洪慈庸 & 慈庸 & 台灣 & 青年 & 中 & 政治 & 后里 & 社會 & 朋友 & 人民 & 大雅 \\
+王如玄 & 台灣 & 王如玄 & OneTaiwan & 朋友 & 婦女 & 中 & 玄 & 勞工 & 手 & 社會 \\
+時代力量 New Power Party & 台灣 & 力量 & 時代 & 人民 & 中 & 政府 & 國會 & 中國 & 政治 & 國民黨 \\
+費鴻泰（阿力克司） & 鴻泰 & 市場 & 服務 & 朋友 & 費鴻泰 & 號 & 鄉親 & 活動 & 感謝 & 費 \\
+藍白拖的逆襲 & 民進黨 & 台灣 & 傳送門 & 大陸 & 蔡英文 & 小編 & 中 & 中國 & 總統 & 國民黨 \\
+民間司法改革基金會 & 律師 & 司法 & 法官 & 檢察官 & 台灣 & 案件 & 人民 & 法院 & 法律 & 判決 \\
+宋楚瑜 & 台灣 & 政府 & 宋楚瑜 & 小宋 & 主席 & 人民 & 總統 & — & 國家 & 宋 \\
+特急件小周的人渣文本 & 國民黨 & 種 & 中 & 想 & 台灣 & 選舉 & 新 & 講 & 政治 & 朱立倫 \\* \bottomrule
+\end{longtable}
+
+\twocolumn
 
 \subsection*{關鍵字擷取（keyword extraction）}
 
@@ -401,32 +722,11 @@ SnowNLP 是一套針對中文的文本處理函式庫，惟其訓練資料僅包
 
 \subsection*{情感分析（sentiment analysis）}
 
-結果見表 \ref{t1}。%
-
-\begin{table}[!htbp]
-\caption{這是一張表格}
-\label{t1}
-\begin{center}
-\begin{tabular}{|c|c|}
-\hline
-cell1 & cell2 \\
-\hline
-cell3 & cell4 \\
-\hline
-\end{tabular}
-\end{center}
-\end{table}
+結果見表。%
 
 \subsection*{社會互動（social interaction）}
 
-結果見圖 \ref{f1}。%
-
-\begin{figure}[!htbp]
-\centering
-\includegraphics[width=\columnwidth]{quantity_time_graph}
-\caption{這是一張圖片}
-\label{f1}
-\end{figure}
+結果見圖。%
 
 \section*{五、結論}
 
