Last day I guess QQ

--- a/7-thesis/main.tex
+++ b/7-thesis/main.tex
@@ -765,7 +765,7 @@ Tumorectomy Project 割腫瘤計畫 & None & None & None & None & None & None & 
 
 \begin{landscape}
 \begin{longtable}[c]{@{}L{2.45cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}L{1.1cm}@{}}
-\caption{情感分析}
+\caption{貼文情感分析}
 \label{t5}\\
 \toprule
 粉絲專頁名稱 & 2016-01-10 $\sim$ 2016-01-17 & 2016-01-03 $\sim$ 2016-01-10 & 2015-12-27 $\sim$ 2016-01-03 & 2015-12-20 $\sim$ 2015-12-27 & 2015-12-13 $\sim$ 2015-12-20 & 2015-12-06 $\sim$ 2015-12-13 & 2015-11-29 $\sim$ 2015-12-06 & 2015-11-22 $\sim$ 2015-11-29 & 2015-11-15 $\sim$ 2015-11-22 & 2015-11-08 $\sim$ 2015-11-15 & 2015-11-01 $\sim$ 2015-11-08 & 2015-10-25 $\sim$ 2015-11-01 & 2015-10-17 $\sim$ 2015-10-25 & 所有時間區間 \\* \midrule
@@ -914,7 +914,7 @@ Tumorectomy Project 割腫瘤計畫 & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/
 \begin{figure}[!htbp]
 \centering
 \includegraphics[width=\columnwidth]{sna}
-\caption{社會網絡分析}
+\caption{貼文／連結的「分享」網絡圖}
 \label{f4}
 \end{figure}
 
@@ -952,10 +952,29 @@ Tumorectomy Project 割腫瘤計畫 & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/0 (-) & 0/
 \end{figure}
 
 經交叉測試，本情感分類模型的正確率達 86.82\%。%
+表 \ref{t5} 是情感分析的結果，A/B (C\%) 表示該粉絲專頁在該時間區間一共有 B 筆貼文，其中有 A 筆是攻擊型競選，佔 C\%。%
+本項分析不計入無內文之貼文。%
+本研究發現，此次選舉只有 26.63\% 的社群媒體貼文是攻擊型競選，其餘貼文皆是說服型競選。%
+
+三位總統候選人攻擊型競選貼文的比例更大幅低於此平均值，許多政治人物也都不常使用攻擊型競選。%
+然而，具鮮明政治立場，或以抨擊反對陣營為目的的意見領袖，則較常使用攻擊型競選。%
+「Taiwan Fugue」、「反馬英九聯盟」、「不禮貌鄉民團」、「藍白拖的逆襲」等粉絲專頁攻擊型競選貼文的比例皆超過八成。%
+
+使用攻擊型競選的比例並未隨著時間而有太大的變化，唯有在 11 月 1 日至 11 月 8 日間，%
+或許是因為舉行兩岸領導人會面的緣故，攻擊型競選貼文的比例創下高峰，比平時高出了一成左右。%
+另外，使用攻擊型競選的比例則在投票日前一週達到最低點，比平時低了 5\% 左右。%
 
 \subsection*{社會互動（social interaction）}
 
-結果見圖。%
+本部份探討的是社群網站上的「分享」網絡，分析使用者分享的貼文／連結的來源，用 Gephi 畫出社會網絡圖。%
+本研究從全部貼文中，一共整理出 12,428 筆分享紀錄。結果見圖 \ref{f4}，圖中的一個圓點表示一個粉絲專頁或網站，%
+一條邊從某個圓點以逆時針方向連到另一個圓點，表示某個粉絲專頁分享了另一個粉絲專頁／網站。%
+圓點的大小表示有多少條邊連到這個圓點（即分支度為多少），邊的粗細表示分享次數。分群的結果以不同顏色表示。%
+
+從圖 \ref{f4} 我們可以發現一些規則，例如，%
+「nagee」較常分享蘋果日報（www.appledaily.com.tw）及批踢踢（www.ptt.cc）的消息；%
+「Taiwan Fugue」較常分享自由時報（news.ltn.com.tw）及蘋果日報（www.appledaily.com.tw）的消息；%
+「白色正義聯盟」較常分享聯合報（udn.com）的消息；「我是台灣人 (I am Taiwanese)」較常分享「綠黨」的消息等等。%
 
 \section*{五、結論}
 
